fix alignment and add content to about.html

--- a/assets/stylesheets/app.sass
+++ b/assets/stylesheets/app.sass
@@ -18,7 +18,11 @@ body
   margin: 0 auto
 
 #about
-  margin: 0 auto
+  h1
+    text-align: center
+  div
+    display: block
+    margin: 0 auto
 
 #footer
   margin: 0 auto
